...
    <string name="h_deactivate">Deaktiviraj</string>
    <string name="h_reactivate">Ponovno aktiviraj</string>
    <string name="h_deactivate_confirm">Želite deaktivirati hidrant? Koda in zgodovina bosta ohranjeni.</string>
    <string name="h_cancel">Prekliči</string>
    <string name="h_save">Shrani</string>
    <string name="h_missing">Ni podatka</string>
    <string name="h_working">Deluje</string>
    <string name="h_not_working">Ne deluje</string>
    <string name="h_needs_inspection">Potreben pregled</string>
    <string name="h_unknown">Neznano</string>
    <string name="h_network">Omrežje ni na voljo. Preverite povezavo in poskusite znova; vnos ostane odprt.</string>
    <string name="h_forbidden">Za ta postopek nimate dovoljenja. Osvežite dostop.</string>
    <string name="h_validation">Podatki niso veljavni. Preverite vnos in razpoložljivo vrsto hidranta.</string>
...
